[project]
name = "lp-webapp"
version = "0.1.0"
description = "\"App Streamlit para Programacion Lineal en 2 variables\""
authors = [
    {name = "castaxyz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
