[tool.poetry]
name = "lp-webapp"
version = "0.1.0"
description = "App Streamlit para Programacion Lineal en 2 variables"
authors = [{name = "castaxyz"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.49.1,<2.0.0",
    "matplotlib>=3.10.6,<4.0.0",
    "numpy>=2.3.2,<3.0.0"
]
packages = []  # esto evita que Poetry intente instalar el proyecto

