[tool.poetry]
name = "lp-webapp"
version = "0.1.0"
description = ""
authors = ["castaxyz <castaxyz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = "^1.49.1"
numpy = "^2.3.2"
matplotlib = "^3.10.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
